Хедер финалка + скрипт

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,13 @@
 <div class="header-container">
   <div class="nav-main">
       <a href="./index.html" class="logo"></a>
-      <button class="menu-btn" type="button" aria-expanded="false" aria-controls="menu" data-menu-btn data-tablet-menu-open>
-        <svg width="40" height="35" aria-label="Переключатель мобильного меню">
-          <use class="open-menu" href="./images/icons/sprite.svg#burger"></use>
-          <use class="close-menu" href="./images/icons/sprite.svg#close"></use> 
-        </svg> 
-      </button>
+      <button class="menu-btn open-menu" type="button" data-menu-open></button>
 
       <button class="buy-now-btn-main" type="button"> Buy now </button>
 
-    <div class="menu" id="menu" data-menu>
+    <div class="menu" data-menu>
 
-      <button class="menu-btn close-btn-tablet" type="button" aria-expanded="false" aria-controls="menu"></button>
+      <button class="menu-btn close-menu" type="button" data-menu-close></button>
 
       <button class="buy-now-btn" type="button"> Buy now </button>
 
