--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -1,170 +1,170 @@
 .menu-btn {
-display: flex;
-align-items: center;
-justify-content: center;
-width: 44px;
-height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
 
-border: none;
-border-radius: 6px;
-background: transparent;
-padding: 0;
-margin: 8px -8px 0 0;
-z-index: 10;
-outline: none;
+  border: none;
+  border-radius: 6px;
+  background: transparent;
+  padding: 0;
+  margin: 8px -8px 0 0;
+  outline: none;
 
+  @media screen and (min-width: 740px) {
+    margin: 40px 0 0 0;
+  }
 
-@media screen and (min-width: 740px) {
-margin: 40px 0 0 0;
-z-index: 8;
-}
-
-@media screen and (min-width: 1280px) {
-display: none;
-}
+  @media screen and (min-width: 1280px) {
+    display: none;
+  }
 }
 
 .menu.is-open {
-display: block;
-right: -20px;
-transform: translateX(0);
-transition: transform 300ms ease-out;
+  display: block;
+  right: -20px;
+  transform: translateX(0);
+  transition: transform 300ms ease-out;
 
-@media screen and (min-width: 740px) {
-right: -33px;
+  @media screen and (min-width: 740px) {
+    right: -30px;
+  }
 }
+.open-menu {
+  @media screen and (min-width: 740px) {
+    margin-left: auto;
+    margin-right: 10px;
+  }
+}
+
+.open-menu::after {
+  content: '';
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-image: url(../images/icons/burger.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
 }
 
 .close-menu {
-display: none;
-fill: $white-color;
-}
-.open-menu {
-fill: $button-primary-hover;
-}  
+  margin: 8px 12px 12px auto;
 
-.menu.is-open .close-menu {
-display: block;
+  @media screen and (min-width: 740px) {
+    position: absolute;
+    top: 0;
+    right: 10px;
+    margin: 0;
+  }
+
+  &::after {
+    content: '';
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-image: url(../images/icons/close.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+  }
 }
-.menu.is-open .open-menu {
-display: none;
-}  
 
 .buy-now-btn {
-display: flex;
-width: 210px;
-height: 44px;
-border: none;
-border-radius: 22px;
-margin: 60px auto 20px;
-padding: 0;
+  display: flex;
+  width: 210px;
+  height: 44px;
+  border: none;
+  border-radius: 22px;
+  margin: 0 auto 20px;
+  padding: 0;
 
-background: $white-color;
+  background: $white-color;
 
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 1.31;
-align-items: center;
-justify-content: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  align-items: center;
+  justify-content: center;
 
-color: $accent-color;
-transition: background-color 300ms ease-out;
+  color: $accent-color;
+  transition: background-color 300ms ease-out;
 
-@media screen and (min-width: 740px) {
-width: 160px;
-margin-top: 40px;
-}
-@media screen and (min-width: 1280px) {
-display: none;
-}
+  @media screen and (min-width: 740px) {
+    width: 160px;
+    margin-top: 40px;
+  }
+  @media screen and (min-width: 1280px) {
+    display: none;
+  }
 
-&::after{
-content: "";
-display: inline-block;
-width: 10px;
-height: 12px;
-margin-left: 20px;
-background-image: url(../images/icons/vector.svg);
-background-repeat: no-repeat;
-background-size: contain;
-}
-&:hover,
-&:focus {
-background: $button-secondary-hover;
-}
+  &::after {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 12px;
+    margin-left: 20px;
+    background-image: url(../images/icons/vector.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+  &:hover,
+  &:focus {
+    background: $button-secondary-hover;
+  }
 }
 
 .buy-now-btn-main {
-width: 170px;
-height: 44px;
-margin: 40px 20px 17px 17px;
+  width: 170px;
+  height: 44px;
+  margin: 40px 20px 17px 17px;
 
-display: flex;
-border: none;
-border-radius: 22px;
-padding: 0;
+  display: flex;
+  border: none;
+  border-radius: 22px;
+  padding: 0;
 
-background: $white-color;
-transition: background-color 300ms ease-out;
+  background: $white-color;
+  transition: background-color 300ms ease-out;
 
-font-style: normal;
-font-weight: bold;
-font-size: 16px;
-line-height: 1.31;
-align-items: center;
-justify-content: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.31;
+  align-items: center;
+  justify-content: center;
 
-color: $accent-color;
+  color: $accent-color;
 
-&:hover,
-&:focus {
-background-color: $button-secondary-hover;
-}
+  &:hover,
+  &:focus {
+    background-color: $button-secondary-hover;
+  }
 
-&::after{
-content: "";
-display: inline-block;
-width: 10px;
-height: 12px;
-margin-left: 20px;
-background-image: url(../images/icons/vector.svg);
-background-repeat: no-repeat;
-background-size: contain;
-}
+  &::after {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 12px;
+    margin-left: 20px;
+    background-image: url(../images/icons/vector.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
 
-@media screen and (max-width: 739px) {
-display: none;
-}
+  @media screen and (max-width: 739px) {
+    display: none;
+  }
 
-@media screen and (min-width: 740px) {
-margin: 40px 20px 0 15px;
-width: 170px;
-height: 44px;
-}
+  @media screen and (min-width: 740px) {
+    margin: 40px 15px 0 0;
+    width: 160px;
+    height: 44px;
+  }
 
-@media screen and (min-width: 1280px) {
-margin: 40px 0 0 0;
-}
-}
-
-.close-btn-tablet {
-position: absolute;
-top: 0;
-right: 0;
-margin: 0;
-
-&::after {
-content: "";
-display: block;
-width: 20px;height: 20px;
-background-image: url(../images/icons/close.svg);
-background-repeat: no-repeat;
-background-size: contain;
-background-position: center;
-}
-
-@media screen and (max-width: 739px) {
-display:none;
-}
+  @media screen and (min-width: 1280px) {
+    margin: 40px 0 0 0;
+  }
 }
