--- a/src/sass/layouts/_section-header.scss
+++ b/src/sass/layouts/_section-header.scss
@@ -1,112 +1,112 @@
 header {
-height: 62px;
-position: absolute;
-top: 0;
-left: 0;
-right: 0; 
+  height: 62px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 
-@media screen and (min-width: 740px) {
-height: 105px;    
-}
-  
-@media screen and (min-width: 1280px) {
-height: 125px;    
-}
+  @media screen and (min-width: 740px) {
+    height: 105px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    height: 125px;
+  }
 }
 
 .header-container {
-margin: 0 auto;
-padding: 0 20px;
-width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+  width: 320px;
 
-@media screen and (min-width: 740px) {
-width: 740px;
-}
-  
-@media screen and (min-width: 1280px) {
-width: 1240px;
-}
+  @media screen and (min-width: 740px) {
+    width: 740px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 1240px;
+  }
 }
 
 .nav-main {
-position: relative;
-display: flex;
-justify-content: space-between;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
 
-@media screen and (min-width: 740px) {
-height: 105px;    
-}
-  
-@media screen and (min-width: 1280px) {
-height: 125px;    
-}
+  @media screen and (min-width: 740px) {
+    height: 105px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    height: 125px;
+  }
 }
 
 .menu {
-position: absolute;
-top: 0;
-right: -100%;
-width: 250px;
-height: 502px;
-background: $burger-background;
+  position: absolute;
+  top: 0;
+  right: -100%;
+  width: 250px;
+  height: 502px;
+  background: $burger-background;
 
-font-style: normal;
-font-weight: bold;
-font-size: 14px;
-line-height: 1.29;
-filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.29;
+  filter: drop-shadow(-8px 0px 20px rgba(0, 0, 0, 0.25));
 
-@media screen and (max-width: 1279px) {
-transform: translateX(100%);
-transition: transform 300ms ease-out;
-display: none;
-z-index: 9;
-}
+  @media screen and (max-width: 1279px) {
+    transform: translateX(100%);
+    transition: transform 300ms ease-out;
+    display: none;
+    z-index: 9;
+  }
 
-@media screen and (min-width: 740px) {
-width: 260px;
-}
+  @media screen and (min-width: 740px) {
+    width: 250px;
+  }
 
-@media screen and (min-width: 1280px) {
-position: absolute;
-top: 0;
-left: 335px;
-height: 125px;
-width: 595px;
-display: flex;
-background: transparent;
-font-size: 16px;
-line-height: 1.31;
-}
+  @media screen and (min-width: 1280px) {
+    position: absolute;
+    top: 0;
+    left: 335px;
+    height: 125px;
+    width: 595px;
+    display: flex;
+    background: transparent;
+    font-size: 16px;
+    line-height: 1.31;
+  }
 }
 
 .menu-nav {
-color: $white-color;
-display: block;
-padding: 12px 21px;
-border: 1px solid #E18298;
-transition: color 300ms ease-out;
+  color: $white-color;
+  display: block;
+  padding: 12px 21px;
+  border: 1px solid #e18298;
+  transition: color 300ms ease-out;
 
-&:hover,
-&:focus {
-color: $accent-color;
-}
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
 
-@media screen and (min-width: 1280px) {
-padding: 17px;
-border: none;
-}
+  @media screen and (min-width: 1280px) {
+    padding: 17px;
+    border: none;
+  }
 }
 
 .menu-list {
-    @media screen and (min-width: 1280px) {
-        display: inline-flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-    }
+  @media screen and (min-width: 1280px) {
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
 .current {
-    color: $accent-color;
+  color: $accent-color;
 }
