--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,6 +1,5 @@
 .footer-css {
   position: relative;
-  padding-top: 113px;
   padding-bottom: 25px;
   background-color: $color-background-section;
 
@@ -63,6 +62,8 @@
   font-style: normal;
   font-weight: 400;
   text-transform: uppercase;
+  margin-bottom: 43px;
+  padding-top: 113px;
 }
 
 .small-letters {
@@ -97,7 +98,6 @@
 }
 
 .copy {
-  display: block;
   font-family: 'DM Sans', san-serif;
   font-style: normal;
   font-weight: 700;
@@ -108,6 +108,26 @@
   padding-top: 22px;
 }
 
-.ice-cream-description {
-  margin-bottom: 43px;
+@media screen and (min-width: $tablet) {
+  .footer-css {
+    padding-top: 165px;
+    padding-bottom: 18px;
+
+    &::after {
+      top: 439px;
+    }
+  }
+
+  .copy {
+    padding-top: 29px;
+  }
+
+  .small-letters {
+    margin-bottom: 16px;
+  }
+
+  .ice-cream-description {
+    margin-bottom: 91px;
+    padding-top: 165px;
+  }
 }
