Замена лого (не совпадал цвет)

--- a/src/sass/components/_logo.scss
+++ b/src/sass/components/_logo.scss
@@ -3,7 +3,7 @@
   width: 200px;
   height: 50px;
   margin: 6px 0;
-  background-image: url(../images/icons/logo.svg);
+  background-image: url(../images/icons/logo.png);
   background-repeat: no-repeat;
   background-size: contain;
 
