футер-таблетка готово

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -89,7 +89,7 @@
   font-size: 12px;
   line-height: 1.833;
   text-align: right;
-  padding-bottom: 43px;
+  margin-bottom: 65px;
   color: $color-header;
 }
 
@@ -105,12 +105,10 @@
   line-height: 1.5;
   text-align: center;
   color: $color-text;
-  padding-top: 22px;
 }
 
 @media screen and (min-width: $tablet) {
   .footer-css {
-    padding-top: 165px;
     padding-bottom: 18px;
 
     &::after {
@@ -118,16 +116,50 @@
     }
   }
 
+  .footer-top {
+    display: flex;
+    justify-content: space-between;
+  }
+
   .copy {
-    padding-top: 29px;
+    display: flex;
+    justify-content: center;
+    font-size: 14px;
+    line-height: 1.86;
+    letter-spacing: 0.02em;
   }
 
   .small-letters {
     margin-bottom: 16px;
+    font-size: 26px;
+    line-height: 1.154;
+    letter-spacing: 0.04em;
+  }
+
+  .big-letters {
+    font-size: 48px;
+    line-height: 1.146;
+    letter-spacing: 0.06em;
   }
 
   .ice-cream-description {
-    margin-bottom: 91px;
+    margin-bottom: 120px;
     padding-top: 165px;
+  }
+
+  .social-icons-item:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  .call {
+    margin: 0;
+    font-size: 14px;
+    line-height: 1.86;
+
+    letter-spacing: 0.02em;
+  }
+
+  .contact-footer {
+    padding-top: 158px;
   }
 }
