десктоп-футер готов

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -134,17 +134,39 @@
     font-size: 26px;
     line-height: 1.154;
     letter-spacing: 0.04em;
+    width: 340px;
   }
 
   .big-letters {
     font-size: 48px;
     line-height: 1.146;
     letter-spacing: 0.06em;
+    width: 340px;
   }
 
   .ice-cream-description {
     margin-bottom: 120px;
     padding-top: 165px;
+  }
+
+  .social-icons-link {
+    width: 34px;
+    height: 34px;
+  }
+
+  .gh-svg {
+    width: 20px;
+    height: 20px;
+  }
+
+  .tlgr-svg {
+    width: 20px;
+    height: 16px;
+  }
+
+  .fb-svg {
+    width: 9px;
+    height: 20px;
   }
 
   .social-icons-item:not(:last-child) {
@@ -155,11 +177,53 @@
     margin: 0;
     font-size: 14px;
     line-height: 1.86;
-
     letter-spacing: 0.02em;
   }
 
   .contact-footer {
     padding-top: 158px;
+  }
+}
+
+@media screen and (min-width: $desktop) {
+  .footer-css {
+    padding-bottom: 10px;
+
+    &::after {
+      top: 377px;
+    }
+  }
+
+  .contact-footer {
+    padding-top: 165px;
+  }
+
+  .ice-cream-description {
+    margin-bottom: 106px;
+  }
+
+  .social-net {
+    margin-bottom: 50px;
+  }
+
+  .social-icons-item:not(:last-child) {
+    margin-right: 24px;
+  }
+
+  .call {
+    font-size: 16px;
+    line-height: 1.875%;
+  }
+
+  .small-letters {
+    font-size: 30px;
+    line-height: 1.133;
+    width: 472px;
+  }
+
+  .big-letters {
+    font-size: 58px;
+    line-height: 1.138;
+    width: 477px;
   }
 }
