--- a/src/sass/layouts/_contacts.scss
+++ b/src/sass/layouts/_contacts.scss
@@ -331,11 +331,6 @@
 }
 
 // MODAL-MAPS
-.contact-backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
 
 .contact-backdrop {
   position: fixed;
@@ -346,6 +341,19 @@
   background-color: rgba(25, 28, 38, 0.8);
   z-index: 100;
   opacity: 1;
+  transition: opacity 0.5s ease-in;
+
+  overflow-y: scroll;
+}
+
+.contact-backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.is-hidden .modal-maps {
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: transform 0.5s ease-in;
 }
 
 .modal-maps {
@@ -356,6 +364,9 @@
   height: auto;
   padding: 40px 20px;
   background-color: #fff;
+  border-radius: 15px;
+  border: 2px solid $secondary-accent;
+
   transform: translate(-50%, -50%) scale(1);
   transition: transform 0.5s ease-in;
 
@@ -388,7 +399,7 @@
   fill: $primary-accent;
 }
 
-.title-modal-maps {
+.contact-title-modal {
   display: block;
   align-items: center;
   text-align: center;
@@ -407,4 +418,143 @@
 .maps {
   width: 100%;
   height: 330px;
+}
+
+// MODAL-FRANCHISE
+.modal-franchise {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: calc(100% - 30px);
+  height: auto;
+  padding: 40px 20px;
+  background-color: #fff;
+  border-radius: 15px;
+  border: 2px solid $secondary-accent;
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 0.5s ease-in;
+
+  @include for-size(mob-tab) {
+    width: 500px;
+  }
+}
+
+.is-hidden .modal-franchise {
+  transform: translate(-50%, -50%) scale(0.5);
+  transition: transform 0.5s ease-in;
+}
+
+.form-field-franchise {
+  display: flex;
+  flex-direction: column;
+  margin-left: auto;
+  margin-right: auto;
+
+  @include for-size(tablet) {
+    max-width: 400px;
+  }
+}
+
+.label-field-franchise {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: $text-cl;
+
+  margin-bottom: 4px;
+}
+
+.position-svg-franchise {
+  position: relative;
+}
+
+.form-input-franchise {
+  width: 100%;
+  height: 40px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+
+  transition-duration: 250ms;
+  transition-timing-function: $timing-function;
+
+  &:focus {
+    outline: none;
+    border-color: $primary-accent;
+  }
+}
+
+.form-icon-franchise {
+  width: 18px;
+  height: 18px;
+  fill: $secondary-accent;
+
+  position: absolute;
+  top: 11px;
+  left: 12px;
+
+  transition-duration: 250ms;
+  transition-timing-function: $timing-function;
+
+  .form-input-franchise:focus ~ & {
+    fill: $primary-accent;
+  }
+}
+
+.form-input-franchise:-webkit-autofill,
+.form-input-franchise:-webkit-autofill:hover,
+.form-input-franchise:-webkit-autofill:focus {
+  -webkit-text-fill-color: $black;
+  -webkit-box-shadow: 0 0 0px 1000px $white inset;
+}
+
+.form-comment-franchise {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  resize: none;
+
+  padding: 12px 16px;
+  margin-bottom: 20px;
+
+  transition-duration: 250ms;
+  transition-timing-function: $timing-function;
+
+  &:focus {
+    outline: none;
+    border-color: $primary-accent;
+  }
+
+  &::placeholder {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+  }
+}
+
+// .span-icon-franchise {
+// }
+
+.form-chek.form-chek-franchise {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.span-icon.span-icon-franchise {
+  top: 13px;
+  left: 0;
+
+  @include for-size(mob-tab) {
+    left: 50px;
+  }
+}
+
+.franchise-send {
+  width: 130px;
+  margin-top: 15px;
 }
