десктоп без паддингов

--- a/src/sass/layouts/_footer.scss
+++ b/src/sass/layouts/_footer.scss
@@ -1,7 +1,8 @@
-.footer-css {
+.container .footer-css {
   position: relative;
   padding-bottom: 25px;
   background-color: $color-background-section;
+  margin: 0;
 
   &::after {
     content: '';
@@ -46,10 +47,12 @@
   height: 32px;
   background-color: $color-social;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
     background-color: $color-accent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
@@ -108,8 +111,10 @@
 }
 
 @media screen and (min-width: $tablet) {
-  .footer-css {
+  .container .footer-css {
     padding-bottom: 18px;
+    padding-left: 36px;
+    padding-right: 36px;
 
     &::after {
       top: 439px;
@@ -174,6 +179,7 @@
   }
 
   .call {
+    display: inline-block;
     margin: 0;
     font-size: 14px;
     line-height: 1.86;
@@ -186,8 +192,10 @@
 }
 
 @media screen and (min-width: $desktop) {
-  .footer-css {
+  .container .footer-css {
     padding-bottom: 10px;
+    margin-left: 114px;
+    padding-right: 121px;
 
     &::after {
       top: 377px;
