dobavlyaet na modalku inputy, oformlyaet, stilizuet

--- a/src/partials/modal-window.html
+++ b/src/partials/modal-window.html
@@ -8,6 +8,69 @@
         ></use>
       </svg>
     </button>
-    <include src="./partials/order-form.html"></include>
+    <!-- <include src="./partials/order-form.html"></include> -->
+        <form class="form-field">
+          <div class="select-form">
+            <label class="select-text" for="ice">Your favorite Ice-Cream</label>
+            <select class="select-ice" id="ice" name="ice">
+              <option value=""></option>
+              <option value="">Dark Chocolate</option>
+              <option value="">Milk Chocolate</option>
+              <option value="">Raspberry</option>
+              <option value="">Strawberry</option>
+              <option value="">Green Tea</option>
+              <option value="">Pistachio</option>
+              <option value="">Blue Moon</option>
+              <option value="">Vanilla</option>
+              <option value="">Milk</option>
+              <option value="">Snikears</option>
+            </select>
+          </div>
+        
+          <p class="pay-text">Pay with</p>
+        
+          <div class="pay-card" role="group">
+            <div class="cards">
+              <label for="pay-1"></label>
+              <input class="select-box" id="pay-1" name="pay" type="radio" value="mastercard" />
+              <svg class="card-svg">
+                <use href="./images/sprite-form.svg#visa"></use>
+              </svg>
+            </div>
+        
+            <div class="cards">
+              <label for="pay-2"></label>
+              <input class="select-box" id="pay-2" name="pay" type="radio" value="mastercard" />
+              <svg class="card-svg">
+                <use href="./images/sprite-form.svg#mastercard"></use>
+              </svg>
+            </div>
+        
+            <div class="cards">
+              <label for="pay-3"></label>
+              <input class="select-box" id="pay-3" name="pay" type="radio" value="paypal" />
+              <svg class="card-svg">
+                <use href="./images/sprite-form.svg#paypal"></use>
+              </svg>
+            </div>
+          </div>
+          <form action="">
+            <input type="text" class="form-text" name="user-name" placeholder="Name*" autocomplete="off" pattern="^[a-zA-Z\s]+$"
+              required>
+            <input type="tel" class="form-text" name="user-tel" placeholder="Tel*" autocomplete="off" pattern="[0-9]{1,18}"
+              required>
+            <input type="mail" class="form-text" name="user-tel" placeholder="Mail*" autocomplete="off" required>
+        
+            <label class="checkbox-label">
+              <input class="custom-checkbox" type="checkbox" id="myCheck" />
+              <span class="checkbox-icon"></span>
+              I agree to become addicted to delicious ice cream
+              <a class="checkbox-link" href="">Agreement conditions</a>
+            </label>
+        
+            <button class="form-btn">Order</button>
+          </form>
+        
+        </form>
   </div>
 </div>
