--- a/src/sass/layouts/_order-form.scss
+++ b/src/sass/layouts/_order-form.scss
@@ -5,9 +5,16 @@
   margin-right: auto;
   background-position: center;
   max-width: 1600px;
-  height: 400px;
-  padding: 30px;
+  height: 606px;
+  padding: 23px;
   z-index: 10;
+  @media screen and (min-width: 768px) {
+    height: 500px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    height: 585px;
+  }
 }
 
 .select-form {
@@ -46,12 +53,12 @@
 }
 
 .select-ice {
-  width: 150px;
+  width: 171px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .select-ice {
-    width: 250px;
+    width: 286px;
     height: 30px;
   }
 }
@@ -64,6 +71,7 @@
 }
 
 .pay-text {
+  margin-top: 10px;
   margin-bottom: 20px;
   color: $primary-text-color;
   font-size: 14px;
@@ -73,7 +81,7 @@
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .pay-text {
     font-size: 18px;
-    margin-top: -67px;
+    margin-top: -76px;
     margin-bottom: 10px;
     margin-left: 124px;
   }
@@ -82,12 +90,12 @@
 @media screen and (min-width: 1200px) {
   .pay-text {
     font-size: 34px;
-    margin-top: -47px;
+    margin-top: -71px;
   }
 }
 
 .pay-card {
-  display: block;
+  display: grid;
 }
 
 @media screen and (min-width: 768px) {
@@ -99,6 +107,13 @@
 .card-svg {
   width: 70px;
   height: 35px;
+}
+
+@media screen and (max-width: 767px) {
+  .card-svg {
+    width: 57px;
+    height: 30px;
+  }
 }
 
 .cards {
@@ -130,15 +145,14 @@
 
 .form-btn {
   display: block;
-  margin-top: 30px;
   margin-right: auto;
   margin-left: auto;
   cursor: pointer;
   font-size: 18px;
   padding: 5px 10px;
   border-radius: 5px;
-  color: $accent-color;
-  background-color: $background-header-hero;
+  color: $background-header-hero;
+  background-color: $accent-color;
   font-weight: 700;
 }
 
@@ -146,7 +160,6 @@
   .form-btn {
     font-size: 22px;
     padding: 8px 30px;
-    margin-top: 40px;
   }
 }
 
@@ -154,7 +167,6 @@
   .form-btn {
     font-size: 22px;
     padding: 10px 40px;
-    margin-top: 40px;
   }
 }
 
@@ -168,3 +180,160 @@
   color: grey;
   background-color: #fff;
 }
+
+.form-text {
+  width: 200px;
+  max-width: 100%;
+  margin-top: 20px;
+  margin-right: auto;
+  margin-left: auto;
+  display: grid;
+  background-color: transparent;
+  border-top: 0;
+  border-left: 0;
+  border-bottom: 2px solid rgba(157, 164, 189, 0.4);
+  font-weight: 600;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-bottom: 15px;
+  font-size: 14px;
+  letter-spacing: 0.1em;
+  color: $primary-text-color;
+  line-height: 1.36;
+  outline: none;
+
+  &:nth-child(3n) {
+    margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    font-size: 16px;
+    margin-top: 40px;
+    width: 500px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 18px;
+    display: block;
+    width: 700px;
+    margin-top: 50px;
+  }
+}
+
+.form-text:last-child {
+  margin-bottom: 0;
+}
+
+.form-text::placeholder {
+  font-size: 10px;
+  text-transform: uppercase;
+  color: rgba(63, 90, 189, 0.815);
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+  }
+}
+
+.form-text:focus {
+  border-bottom: 1px solid rgba(63, 90, 189, 0.815);
+}
+
+.form-text:not(:placeholder-shown):focus:valid {
+  color: green;
+  border-color: green;
+}
+
+.form-text:not(:placeholder-shown):invalid {
+  color: red;
+  border-color: red;
+}
+
+.checkbox-label {
+  max-width: 300px;
+  display: block;
+  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-size: 12px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: $main-font;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-top: 30px;
+    margin-bottom: 25px;
+    font-size: 14px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 100%;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 30px;
+    margin-bottom: 30px;
+    font-size: 16px;
+  }
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.checkbox-link {
+  color: $accent-color;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: green;
+  }
+}
+
+/* .checkbox-label {
+  display: inline-flex;
+  align-items: center;
+  font-size: 12px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: $main-font;
+}
+
+.checkbox-link {
+  display: inline-block;
+  margin-left: 5px;
+  color: $primary-white-color;
+  text-decoration: none;
+
+  &:hover,
+  &:focus {
+    color: $accent-color;
+  }
+}
+
+.custom-checkbox {
+  appearance: none;
+  position: absolute;
+}
+
+.checkbox-icon {
+  display: inline-block;
+  width: 25px;
+  height: 25px;
+  margin-right: 5px;
+
+  border: 1px solid $secondary-text-color;
+  border-radius: 4px;
+  background-color: transparent;
+  background-image: url('../../images/ice-cream.svg');
+
+  .custom-checkbox:checked + & {
+    width: 25px;
+    height: 25px;
+    border: 1px solid $primary-text-color;
+    background-image: url('../../images/ice-cream-colored.svg');
+    background-size: contain;
+  }
+} */
