Исправляет позиционирование картинок

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -34,7 +34,7 @@
   }
   @include for-size(desktop) {
     padding-top: 41px;
-    padding-left: 40px;
+    padding-left: 0px;
   }
 }
 
@@ -88,6 +88,7 @@
 }
 
 .hero-amount-wrap {
+  position: relative;
   margin-left: auto;
   margin-right: 0px;
   @include for-size(desktop) {
@@ -302,7 +303,7 @@
     // top: 290px;
     // left: 20px;
     top: -75px;
-    left: -20px;
+    left: 2px;
   }
 }
 
@@ -320,7 +321,8 @@
     height: 133px;
     top: 184px;
     // left: 565px;
-    left: 75%;
+    // left: 75%;
+    left: -120px;
   }
 
   @include for-size(desktop) {
@@ -328,6 +330,8 @@
     height: 232px;
     top: 299px;
     // left: 755px;
-    left: 72%;
+    // left: 72%;
+    top: 258px;
+    left: -195px;
   }
 }
