Уточняет разметку header

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -37,8 +37,8 @@
     </div>
 </header>
 
-<div class="mobile-nav">
-    <button class="header__button">
+<div class="mobile-nav" is hidden>
+    <button class="header__button side">
         Buy now
         <svg class="button-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" width="4" height="8" viewBox="0 0 717 1024">
             <title></title>
@@ -50,19 +50,19 @@
     <nav>
         <ul class="site-nav list">
             <li class="site-nav__item">
-                <a href="">Home</a>
+                <a class="site-nav__link current" href="">Home</a>
             </li>
             <li class="site-nav__item">
-                <a href="">About us</a>
-            </li>
-            <li>
-                <a href="">How it’s made?</a>
+                <a class="site-nav__link" href="">About us</a>
             </li>
             <li class="site-nav__item">
-                <a href="">Our products</a>
+                <a class="site-nav__link" href="">How it’s made?</a>
             </li>
             <li class="site-nav__item">
-                <a href="">Contact</a>
+                <a class="site-nav__link" href="">Our products</a>
+            </li>
+            <li class="site-nav__item">
+                <a class="site-nav__link" href="">Contact</a>
             </li>
         </ul>            
     </nav>
