Убирает outline in header

--- a/src/sass/header/_header.scss
+++ b/src/sass/header/_header.scss
@@ -97,9 +97,7 @@
   margin-left: 12px;
 }
 
-* {
-  outline: 1px solid blue;
-}
+
 
 .mobile-nav {
   position: absolute;
@@ -130,3 +128,7 @@
   display: flex;
   }
 }
+
+// * {
+//   outline: 1px solid blue;
+// }
