--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,5 @@
+@import './utils/slick-theme';
+@import './utils/slick';
 @import './utils/variables';
 @import './base/fonts';
 @import './base/common';
