Додав медіа 320 в _base.scss, додав відповідні width в точках перелому.

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -20,7 +20,6 @@ ul {
 }
 a {
   text-decoration: none;
-  
 }
 button {
   font-family: inherit;
@@ -40,13 +39,21 @@ img {
   padding-left: 20px;
   padding-right: 20px;
 
+  @media screen and (min-width: 320px) {
+    padding-left: 20px;
+    padding-right: 20px;
+    width: 320px;
+  }
+
   @media screen and (min-width: 768px) {
     padding-left: 35px;
     padding-right: 35px;
+    width: 768px;
   }
   @media screen and (min-width: 1200px) {
     padding-left: 115px;
     padding-right: 115px;
+    width: 1200px;
   }
 }
 p {
@@ -62,4 +69,3 @@ h6 {
   padding: 0;
   margin: 0;
 }
-
