--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="about">
     <div class="container hero__container">
         
             <div class="hero-top-line">
