--- a/src/partials/burger.html
+++ b/src/partials/burger.html
@@ -1,17 +1,22 @@
-<div class="mobile-container" data-menu> 
-    <button type="button" class="btn-burger">
-        <svg class="btn-icon" width="10" height="10">
-            <use xlink:href="./images/sprite.svg#icon-cheveron-right">
-            </use>
-        </svg>Buy now</button>
-        
-    <ul class="list mobile-menu">
-        <li class="item"> <a href="" class="link nav-link"> Home </a> </li>
-        <li class="item"> <a href="" class="link nav-link"> About us</a> </li>
-        <li class="item"> <a href="" class="link nav-link"> How it's made?</a> </li>
-        <li class="item"> <a href="" class="link nav-link"> Our product</a> </li>
-        <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
-    </ul>
+<div class="mobile-container" data-menu > 
+        <div class="mobile-content" >
+           
 
-    </button>
+            <button type="button" class="btn-burger">
+                <svg class="btn-icon" width="10" height="10">
+                    <use xlink:href="./images/sprite.svg#icon-cheveron-right">
+                    </use>
+                </svg>Buy now</button>
+            
+            <ul class="list mobile-menu">
+                <li class="item"> <a href="" class="link nav-link"> Home </a> </li>
+                <li class="item"> <a href="" class="link nav-link"> About us</a> </li>
+                <li class="item"> <a href="" class="link nav-link"> How it's made?</a> </li>
+                <li class="item"> <a href="" class="link nav-link"> Our product</a> </li>
+                <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
+            </ul>
+            
+            </button>
+        </div>
+    
 </div>
