--- a/src/sass/layouts/_burger.scss
+++ b/src/sass/layouts/_burger.scss
@@ -16,6 +16,7 @@
     display: none;
   }
 }
+
 .menu-button .icon-menu-close {
   display: none;
 }
@@ -29,18 +30,19 @@
 }
 
 .mobile-container {
-  position: fixed;
+  position: absolute;
   right: 0;
-  top: 0;
+  // top: 0;
   width: 250px;
   height: 500px;
-  background-color: $bg-mobile-menu;
-  padding: 60px 20px;
+  z-index: 50;
+  background-color: rgba(94, 27, 27, 0.3);
 
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
   overflow: auto;
-  z-index: 50;
+  transition: opacity 250ms linear, visibility 250ms liner;
 
   @include for-size(tablet) {
     height: 1000px;
@@ -49,20 +51,40 @@
     display: none;
   }
 }
-
 .mobile-container.is-open {
-  opacity: 0.5;
+  opacity: 1;
   visibility: visible;
+  pointer-events: initial;
   overflow: scroll;
 }
+.mobile-content {
+  position: absolute;
+  // top: 0;
+  right: 0;
+  width: 250px;
+  height: 500px;
+  background-color: $bg-mobile-menu;
+  padding: 60px 20px;
 
-// .mobile-container.is-open .menu-button {
-//   position: absolute;
-//   display: block;
-//   top: 23px;
-//   right: 20px;
-// }
+  transform: translateX(100%);
+  transition: transform 250ms linear;
 
+  @include for-size(tablet) {
+    height: 1000px;
+  }
+}
+
+.mobile-container.is-open .mobile-content {
+  width: 250px;
+  height: 500px;
+  background-color: $bg-mobile-menu;
+
+  transform: translateX(0);
+
+  @include for-size(tablet) {
+    height: 1000px;
+  }
+}
 .btn-burger {
   @extend %button;
   position: relative;
