fix cow and shake:hover

--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -3,8 +3,8 @@
 <p class="hm_caption" data-aos="products-card-title-animation" data-aos-offset="5">tradition and love</p>
 <h2 class="hm_title" data-aos="products-card-title-animation" data-aos-offset="5">how it’s made?</h2>
 <div class="hm_description">
-<div class="hw-img grow"  data-aos="slide-right">
-    <picture >
+<div class="hw-img grow circle"  data-aos="slide-right">
+     <picture  >
         <source srcset="
          ./images/pictures/how-made/desktop/how_made_cow_1x_d.png 1x,
          ./images/pictures/how-made/desktop/how_made_cow_2x_d.png 2x"
