--- a/src/partials/shops.html
+++ b/src/partials/shops.html
@@ -6,10 +6,12 @@
       <ul>
         <li>
           <h3 class="shops-city">Chicago</h3>
-          <p class="shops-text">Fusce ut velit laoreet, tempu arcu molestie vulputate</p>
+          <p class="shops-text">
+            Fusce ut velit laoreet, tempu arcu molestie vulputate
+          </p>
         </li>
       </ul>
-      <ul class="shops-schedule-1">    
+      <ul class="shops-schedule-1">
         <li>
           <p class="shops-working-days">Monday - Friday</p>
           <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
@@ -19,25 +21,31 @@
           <p class="shops-working-hours">08:00 AM - 16:00 PM</p>
         </li>
       </ul>
-      <ul class="shops-contacts-container">  
+      <ul class="shops-contacts-container">
         <li>
-          <a class="shops-contacts" href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
+          <a class="shops-contacts" href="tel:+61(0) 383 766 284"
+            >+61(0) 383 766 284</a
+          >
         </li>
         <li>
-          <a class="shops-contacts" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          <a class="shops-contacts" href="mailto:noreply@envato.com"
+            >noreply@envato.com</a
+          >
         </li>
       </ul>
-    </div>  
-      
+    </div>
+
     <div class="shops-section">
       <h2 class="shops-title-foodtruck">FOODTRUCK</h2>
       <ul>
         <li>
           <h3 class="shops-city">Los Angeles</h3>
-          <p class="shops-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+          <p class="shops-text">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
         </li>
       </ul>
-      <ul class="shops-schedule-1">    
+      <ul class="shops-schedule-1">
         <li>
           <p class="shops-working-days">Monday - Friday</p>
           <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
@@ -47,25 +55,31 @@
           <p class="shops-working-hours">08:00 AM - 16:00 PM</p>
         </li>
       </ul>
-      <ul class="shops-contacts-container">  
+      <ul class="shops-contacts-container">
         <li>
-          <a class="shops-contacts" href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
+          <a class="shops-contacts" href="tel:+61(0) 383 766 284"
+            >+61(0) 383 766 284</a
+          >
         </li>
         <li>
-          <a class="shops-contacts" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          <a class="shops-contacts" href="mailto:noreply@envato.com"
+            >noreply@envato.com</a
+          >
         </li>
       </ul>
     </div>
-  
+
     <div class="shops-section">
       <h2 class="shops-title">CAFE</h2>
       <ul>
         <li>
           <h3 class="shops-city">New York</h3>
-          <p class="shops-text">Fusce ut velit laoreet, tempus arcu molestie vulputate</p>
+          <p class="shops-text">
+            Fusce ut velit laoreet, tempus arcu molestie vulputate
+          </p>
         </li>
       </ul>
-      <ul class="shops-schedule-1">    
+      <ul class="shops-schedule-1">
         <li>
           <p class="shops-working-days">Monday - Friday</p>
           <p class="shops-working-hours">06:00 AM - 10:00 PM</p>
@@ -75,12 +89,16 @@
           <p class="shops-working-hours">08:00 AM - 16:00 PM</p>
         </li>
       </ul>
-      <ul class="shops-contacts-container">  
+      <ul class="shops-contacts-container">
         <li>
-          <a class="shops-contacts" href="tel:+61(0) 383 766 284">+61(0) 383 766 284</a>
+          <a class="shops-contacts" href="tel:+61(0) 383 766 284"
+            >+61(0) 383 766 284</a
+          >
         </li>
         <li>
-          <a class="shops-contacts" href="mailto:noreply@envato.com">noreply@envato.com</a>
+          <a class="shops-contacts" href="mailto:noreply@envato.com"
+            >noreply@envato.com</a
+          >
         </li>
       </ul>
     </div>
