доделала анимацию футера и секции how made

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,7 +8,10 @@
       >
         100% natural
       </p>
-      <span data-aos="products-card-title-animation" data-aos-offset="10">
+      <span
+        data-aos="products-card-title-animation-accent"
+        data-aos-offset="10"
+      >
         products</span
       >
     </h2>
