--- a/src/sass/utils/_animations.scss
+++ b/src/sass/utils/_animations.scss
@@ -22,6 +22,13 @@
   }
 }
 
+[data-aos='products-card-title-animation-accent'] {
+  &.aos-animate {
+    animation: products-card-title-animation-accent 1s
+      cubic-bezier(0.215, 0.61, 0.355, 1) both;
+  }
+}
+
 @keyframes products-card-title-animation {
   0% {
     letter-spacing: 1em;
@@ -36,6 +43,80 @@
     -webkit-transform: translateZ(0) translateY(0);
     transform: translateZ(0) translateY(0);
     opacity: 1;
+  }
+}
+
+@keyframes products-card-title-animation-accent {
+  0% {
+    letter-spacing: 1em;
+    -webkit-transform: translateZ(400px);
+    transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.3;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+[data-aos='footer-animation'] {
+  @media screen and(min-width: 768px) {
+    &.aos-animate {
+      animation: footer-animation 1s cubic-bezier(0.215, 0.61, 0.355, 1) both;
+    }
+  }
+}
+
+[data-aos='footer-animation-accent'] {
+  @media screen and(min-width: 768px) {
+    &.aos-animate {
+      animation: footer-animation-accent 1s cubic-bezier(0.215, 0.61, 0.355, 1)
+        both;
+    }
+  }
+}
+
+@keyframes footer-animation {
+  0% {
+    letter-spacing: 0.05em;
+    -webkit-transform: translateZ(400px) translateY(-100px);
+    transform: translateZ(400px) translateY(-100px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.3;
+  }
+  100% {
+    -webkit-transform: translateZ(0) translateY(0);
+    transform: translateZ(0) translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes footer-animation-accent {
+  0% {
+    letter-spacing: -0.5em;
+    -webkit-transform: translateZ(400px);
+    transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.3;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
+    opacity: 1;
+  }
+}
+
+[data-aos='bounce-top'] {
+  &.aos-animate {
+    animation: bounce-top 2s cubic-bezier(0.215, 0.61, 0.355, 1) both;
   }
 }
 
