Поставил более плавное пролистывание слайдера

--- a/src/sass/layouts/_section-slider.scss
+++ b/src/sass/layouts/_section-slider.scss
@@ -31,7 +31,7 @@
 
   margin-bottom: 30px;
 
-  transition: transform 250ms;
+  transition: transform 500ms ease-out;
 
   &.centered {
     position: initial;
