--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -31,7 +31,7 @@
     Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.<br><br>
     Aliquam erat volutpat. Aenean accumsan.</p>
     </div>
-    <button data-modal-open class="btn hm_btn " data-aos="slide-up">Read more 
+    <button class="btn hm_btn " data-aos="slide-up">Read more 
           <svg
             class="arrow-svg"
             aria-label="Переход на мгновенную покупку"
