--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -236,29 +236,29 @@
 // .header-navigation-list:active {
 //   color: $primary-accent;
 // }
-.header-backdrop.is-hidden {
-  visibility: hidden;
-  opacity: 0;
-  pointer-events: none;
-}
-.header-backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: rgba(25, 28, 38, 0.8);
-  z-index: 100;
-  opacity: 1;
-}
+// .header-backdrop.is-hidden {
+//   visibility: hidden;
+//   opacity: 0;
+//   pointer-events: none;
+// }
+// .header-backdrop {
+//   position: fixed;
+//   top: 0;
+//   left: 0;
+//   right: 0;
+//   bottom: 0;
+//   background-color: rgba(25, 28, 38, 0.8);
+//   z-index: 100;
+//   opacity: 1;
+// }
 
-.header-modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  max-width: 480px;
-  background-color: white;
-  padding: 80px 40px;
-}
+// .header-modal {
+//   position: absolute;
+//   top: 50%;
+//   left: 50%;
+//   transform: translate(-50%, -50%);
+//   width: 100%;
+//   max-width: 480px;
+//   background-color: white;
+//   padding: 80px 40px;
+// }
