--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,8 +1,8 @@
-/*
+
 * {
     outline: 1px solid black;
 }
-*/
+
 .header-section {
   position: relative;
 
@@ -13,6 +13,8 @@
 
   margin-left: auto;
   margin-right: auto;
+
+  background-color: rgba(255, 184, 202, 1);
 
   @media screen and (min-width: 768px) {
     padding-left: 34px;
@@ -86,6 +88,8 @@
   display: block;
 
   position: absolute;
+  z-index: 222;
+
   top: 0;
   right: 0;
   width: 100%;
@@ -114,7 +118,7 @@
 .icon {
   display: inline-block;
 
-  background-color: #fff;
+  background-color: rgba(255, 184, 202, 1);
 }
 
 .icon-open {
@@ -207,13 +211,16 @@
 
   color: #fff;
 
+  &:focus , &:hover {
+    color: #d41443;
+  }
+
   @media screen and (min-width: 768px) {
     padding-left: 24px;
   }
 
   @media screen and (min-width: 1200px) {
-    color: #d41443;
-
+    
     padding-left: 35px;
 
     font-size: 16px;
@@ -222,6 +229,8 @@
     border: none;
   }
 }
+
+
 
 .header-item {
   height: 100%;
